# confluence-mcp

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Plan.MD  README.md  build_docker.sh  check_config.py  pyproject.toml  setup.sh  test_env.py  test_fastmcp.py
.github/workflows/: ci.yml
specs/: confluence-openapi.json
src/: .env.example
src/confluence_mcp/: __init__.py  api_client.py  config.py  confluence-open-spec.json  main.py  mcp_server.py  models.py
src/confluence_mcp/functions/: __init__.py  page.py  page.py.new  page_refactored.py  search.py  search_refactored.py  space.py  space.py.new
tests/: mock_fastmcp.py  test_api_client.py  test_api_client_additional.py  test_api_client_clean.py  test_api_client_enhanced.py  test_api_client_fixed.py  test_api_client_unittest.py  test_config.py
tests/test_functions/: __init__.py  test_page.py  test_page_fixed.py  test_page_impl.py  test_search.py  test_search_enhanced.py  test_search_fixed.py  test_search_impl.py  test_space.py  test_space_fixed.py  test_space_new.py
